--- a/templates/comment_form.html
+++ b/templates/comment_form.html
@@ -1,64 +1,59 @@
-                            <form action="{{ url_for('singlepost', postid=post_id) }}" method="post"  enctype="multipart/form-data" class="answer_form" id ="{{ parent_id }}">
-                        {{form.hidden_tag()}}
-                                    <div class="form-group col-xs-9 col-sm-10 answer-textarea">
-                               {{form.text(class_="form-control", rows="2")}}
-                                    </div>
-                                 <div id ="hide" class="form-group col-xs-3 col-sm-2 mobile-form-group">
-                            <label class="hand-cursor">
-                               {{form.file}}
-                                <span class="fa fa-camera"></span>
-                                <span class="photo_text hidden-xs">Image</span>
-                            </label>
-                            <button type="submit" class="btn btn-motive">comment</button>
+<script type="text/javascript" src="{{ url_for ('static', filename= "js/file_form.js") }}"></script>
 
+{#this form rendered when discussion button for comment clicked#}
 
+<form action="{{ url_for('singlepost', postid=post_id) }}" method="post" enctype="multipart/form-data"
+      class="answer_form" id="{{ parent_id }}">
+    {{ form.hidden_tag() }}
+    <div class="form-group col-xs-9 col-sm-10 answer-textarea">
+        {{ form.text(class_="form-control", rows="2") }}
+    </div>
+    <div id="hide" class="form-group col-xs-3 col-sm-2 mobile-form-group">
+        <label class="hand-cursor">
+            {{ form.file }}
+            <span class="fa fa-camera"></span>
+            <span class="photo_text hidden-xs">Image</span>
+        </label>
+        <button type="submit" class="btn btn-motive">comment</button>
+    </div>
 
-                        </div>
-
-                                        {% if form.errors %}
-                                            <ul class=errors>
-                                             {% for error in form.errors %}
-                                              <li>{{ error }}</li>
-                                            {% endfor %}
-                                            </ul>
-                                        {% endif %}
-
+    {% if form.errors %}
+        <ul class=errors>
+            {% for error in form.errors %}
+                <li>{{ error }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 
 </form>
 
 
-
 <script>
-$(".answer_form").submit(function(event) {
+    $(".answer_form").submit(function (event) {
+        var formData = new FormData($(this)[0]);
+        $.ajax({
+            type: "POST",
+            url: "{{ url_for('singlepost', postid=post_id, parent=parent_id) }}",
+            data: formData,
+            processData: false,
+            contentType: false,
+            success: function (data) {
+                $("#comments").html(data.comments);
+                $("textarea#text").val("");
+            },
+            error: function (xhr, str) {
+                alert('Mistake ' + xhr.responseCode);
+            }
+        });
+        event.preventDefault();
+        {#reinit buttons for likes, reactions and discussion#}
 
-    var formData = new FormData($(this)[0]);
-
-    $.ajax({
-        type: "POST",
-        url: "{{ url_for('singlepost', postid=post_id, parent=parent_id) }}",
-        data: formData,
-        processData: false,
-        contentType: false,
-
-        success: function (data) {
-                        alert(data.comments);
-
-            $("#comments").html(data.comments);
-            $("textarea#text").val("");
-
-        },
-        error: function (xhr, str) {
-            alert('Mistake ' + xhr.responseCode);
-        }
+        $(document).ready(function () {
+            $("img.unliked, img.liked").on("click", ToggleLikeUnlike);
+            $('.smile').on("click", AddReaction);
+            ShowReactionDiv();
+            $(".discussion.post-form.comment-login").on("click", RenderPostCommentForm);
+        });
     });
-    event.preventDefault();
-    $(document).ready(function() {
-
-    $("img.unliked, img.liked").on("click", ToggleLikeUnlike);
-    $('.smile').on("click", AddReaction);
-    ShowReactionDiv();
-    $(".discussion.post-form.comment-login").on("click", RenderPostCommentForm);
-});
-});
 
 </script>
