--- a/templates/last_posts.html
+++ b/templates/last_posts.html
@@ -1,160 +1,104 @@
 {% extends "base.html" %}
 {% from 'helpers.html' import posts_macro with context %}
-  {% from 'helpers.html' import render_pagination with context %}
+{% from 'helpers.html' import render_pagination with context %}
 {% block body %}
     <section class="ct-blogGrid ct-u-paddingBottom20">
         <div class="ct-pageSectionHeader ct-u-paddingBottom20">
             <h3 class="text-uppercase ct-u-size50 text-center">BLOG</h3>
         </div>
+        <div class="container">
+            <div class="row">
+                <div class="sort_box">
+                    {% if sort == "rating" %}
+                        <div class="sort-left col-md-6 col-sm-6">
 
-            <div class="container">
-                <div class="row">
-                    <div class="sort_box">
-                        {% if sort == "rating" %}
-                            <div class="sort-left col-md-6">
+                            <a href="{{ url_for('last_posts', sort = 'rating') }}">
+                                <h4 class="ct-u-size30 active">popular posts</h4>
+                            </a>
 
-                                <a href="{{url_for('last_posts', sort = 'rating')}}">
-                                    <h4 class="ct-u-size30 active">popular posts</h4>
-                                </a>
+                        </div>
+                        <div class="sort-right col-md-6 col-sm-6">
+                            <a href="{{ url_for('last_posts', sort = 'data') }}" class="ct-u-floatLeft">
+                                <h4 class="ct-u-size30">latest posts</h4>
+                            </a>
+                        </div>
+                    {% else %}
+                        <div class="sort-left col-md-6 col-sm-6">
 
-                            </div>
-                            <div class="sort-right col-md-6">
+                            <a href="{{ url_for('last_posts', sort = 'rating') }}">
+                                <h4 class="ct-u-size30">popular posts</h4>
+                            </a>
 
+                        </div>
+                        <div class="sort-right col-md-6 col-sm-6">
 
-                                <a href="{{url_for('last_posts', sort = 'data')}}" class="ct-u-floatLeft">
-                                    <h4 class="ct-u-size30">latest posts</h4>
-                                </a>
-                            </div>
-                        {% else %}
-                            <div class="sort-left col-md-6">
+                            <a href="{{ url_for('last_posts', sort = 'data') }}" class="ct-u-floatLeft">
+                                <h4 class="ct-u-size30 active">latest posts</h4>
+                            </a>
+                        </div>
+            {% endif %}
 
-                                <a href="{{url_for('last_posts', sort = 'rating')}}">
-                                    <h4 class="ct-u-size30">popular posts</h4>
-                                </a>
-
-                            </div>
-                            <div class="sort-right col-md-6">
-
-
-                                <a href="{{url_for('last_posts', sort = 'data')}}" class="ct-u-floatLeft">
-                                    <h4 class="ct-u-size30 active">latest posts</h4>
-                                </a>
-                            </div>
-
+                </div>
 
 
-
-
-
-
-                        {% endif %}
-
-
-
-                    </div>
-
-
-
-
-                    <div class="ct-blog ct-u-paddingBoth20">
-                    <div class="col-sm-8" >
+                <div class="ct-blog ct-u-paddingBoth20">
+                    <div class="col-sm-8">
                         {% for post in posts %}
                             {% if not post.deleted %}
-
-
-
                                 {{ posts_macro(post, posts_relationships) }}
-
                             {% endif %}
                         {% endfor %}
-                </div>
+                    </div>
 
-                        <div class="col-xs-12 col-sm-3 col-sm-offset-1 sidebar">
-                    <div class="ct-inputSearch ct-u-marginBottom40">
-                        <div class="panel-group">
-                            <div class="panel panel-default">
-                                <div class="panel-heading">
-                                  <div class="panel-title">
-                                    <a class="collapsed" href="{{url_for('add_post')}}">
-                                        new post
-                                       <div class="plus ct-Diamond ct-Diamond--motive"></div>
-                                    </a>
-                                  </div>
+                    <div class="col-xs-12 col-sm-3 col-sm-offset-1 sidebar">
+                        <div class="ct-inputSearch ct-u-marginBottom40">
+                            <div class="panel-group">
+                                <div class="panel panel-default">
+                                    <div class="panel-heading">
+                                        <div class="panel-title">
+                                            <a class="collapsed" href="{{ url_for('add_post') }}">
+                                                new post
+                                                <div class="plus ct-Diamond ct-Diamond--motive"></div>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="panel panel-default">
+                                    <div class="panel-heading">
+                                        <div class="panel-title">
+                                            <a class="collapsed" href="{{ url_for('add_product') }}">
+                                                new product
+                                                <div class="plus ct-Diamond ct-Diamond--motive"></div>
+                                            </a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="panel panel-default">
-                            <div class="panel-heading">
-                              <div class="panel-title">
-                                <a class="collapsed" href="{{url_for('add_product')}}">
-                                    new product
-                                   <div class="plus ct-Diamond ct-Diamond--motive"></div>
-                                </a>
-                              </div>
-                            </div>
                         </div>
-                    </div>
-                    </div>
 
-{#                    <h4 class="text-uppercase ct-fw-600 ct-u-paddingBottom15 ct-u-borderBottomGrayLighter">Recent Posts</h4>#}
-{#                    <ul class="ct-mediaList list-unstyled ct-u-paddingTop10 ct-u-paddingBottom40">#}
-{##}
-{#                        {% for post in posts %}#}
-{#                            <li>#}
-{#                            <a href="{{url_for('singlepost', postid=post.id)}}">#}
-{#                            {% if post.image %}#}
-{##}
-{#                                <img class="img-circle left-image" src="{{ url_for('uploaded_file',filename= post.image )}}" style="height:50px">#}
-{##}
-{#                            {% else %}#}
-{#                                <img class="img-circle left-image" src="{{ url_for('uploaded_file',filename="carusel4.jpg" )}}" style="height:50px">#}
-{##}
-{#                            {% endif %}#}
-{#                            <div class="description side">#}
-{#                                <p class="ct-fw-600 ct-u-size18">{{post.title|truncate(50, True) }}</p>#}
-{##}
-{##}
-{#                                 <p class="ct-mediaList-date">{{ post.published_at|datetime }}</p>#}
-{##}
-{##}
-{#                            </div>#}
-{#                            </a>#}
-{#                             </li>#}
-{#                             {% endfor%}#}
-{##}
-{##}
-{##}
-{#                </ul>#}
-                <h4 class="text-uppercase ct-fw-600 ct-u-paddingBottom15 ct-u-borderBottomGrayLighter">Latest Comments</h4>
-                <ul class="ct-simpleList list-unstyled ct-u-paddingTop10 ct-u-paddingBottom40">
-                    {% for comment in comments  %}
-                    <li><i class="fa fa-chevron-right"></i>{{ comments_rel[comment.id]["author"].username }} on <a href="#"><span>{{ comments_rel[comment.id]["post"].title }}</span></a></li>
-                    {% endfor %}
-                </ul>
+
+                        <h4 class="text-uppercase ct-fw-600 ct-u-paddingBottom15 ct-u-borderBottomGrayLighter">Latest
+                            Comments</h4>
+                        <ul class="ct-simpleList list-unstyled ct-u-paddingTop10 ct-u-paddingBottom40">
+                            {% for comment in comments %}
+                                <li><i class="fa fa-chevron-right"></i>{{ comments_rel[comment.id]["author"].username }}
+                                    on <a href="#"><span>{{ comments_rel[comment.id]["post"].title }}</span></a></li>
+                            {% endfor %}
+                        </ul>
+                    </div>
                 </div>
-
-                    </div>
-
-                </div>
-
-
-
-
-                   <div class="ct-u-marginBoth20 ct-pagination">
-            <ul class="pagination pagination-lg ">
-                        {{  render_pagination(pagination, "last_posts", sort) }}
-            </ul>
-        </div>
             </div>
+
+
+            <div class="ct-u-marginBoth20 ct-pagination">
+                <ul class="pagination pagination-lg ">
+                    {{ render_pagination(pagination, "last_posts", sort) }}
+                </ul>
+            </div>
+        </div>
     </section>
 
-<script>
-    $(document).ready(function() {
 
-        $("img.unliked, img.liked").on("click", ToggleLikeUnlike);
-        $('.smile').on("click", AddReaction);
-        ShowReactionDiv();
-    });
-</script>
 
 {% endblock %}
 
