--- a/static/style/style.css
+++ b/static/style/style.css
@@ -1784,7 +1784,10 @@ span.fa.fa-camera, span.photo_text.hidden-xs{
     }
 }
 
-
+@media (max-width: 768px){
+.hidden-xs {
+    display: none !important;
+}}
 ul ul{
   margin-left:25px;
 
@@ -1806,7 +1809,7 @@ ul ul ul ul ul li span {
 
 
 
-@media (max-width: 767px) {
+@media (max-width: 770px) {
     .btn-motive{
         font-size: 12px;
     }
