--- a/templates/comment_box/product_comment_box.html
+++ b/templates/comment_box/product_comment_box.html
@@ -1,14 +1,12 @@
 
-<!--<script type="text/javascript" src="{{ url_for ('static', filename= "js/comment.js") }}" acync></script>-->
-
-<!--<script type="text/javascript" src="{{ url_for ('static', filename= "js/my.js") }}" acync></script>-->
+{#this is a little part of template, which rendered after one comment editet. It is allows to not reload all comments,
+but update with ajax only one comment, that was edited#}
 
 {% from 'helpers.html' import product_comment_macro with context %}
                     {{ product_comment_macro(comment, comments_relationships) }}
 <script>
 $("form.edit_comment").submit(function(event) {
     var id = "{{comment.id}}";
-    alert(123);
     var formData = new FormData($(this)[0]);
     $.ajax({
         type: "POST",
@@ -16,11 +14,9 @@ $("form.edit_comment").submit(function(event) {
         data: formData,
         processData: false,
         contentType: false,
-
         success: function (data) {
             $(".one_comment#comment" + id).html(data.comment);
             $("textarea#text").val("");
-
         },
         error: function (xhr, str) {
             alert('Mistake ' + xhr.responseCode);
@@ -29,7 +25,6 @@ $("form.edit_comment").submit(function(event) {
     event.preventDefault();
 });
 $(document).ready(function() {
-
     $("img.unliked, img.liked").on("click", ToggleLikeUnlike);
     $('.smile').on("click", AddReaction);
     ShowReactionDiv();
