--- a/templates/edit_product.html
+++ b/templates/edit_product.html
@@ -1,81 +1,46 @@
 {% extends "base.html" %}
+
 {% from "security/_macros.html" import render_field_with_errors, render_field %}
 {% block body %}
-<section class="ct-u-paddingBo40">
-<div class="container">
-    <div class="ct-sectionHeader ct-u-paddingBoth20">
-        <h2 class="ct-u-size34">add product</h2>
-    </div>
-    <div class="row">
-        <div class="col-xs-offset-1 col-xs-10 col-md-offset-2 col-md-8">
+    <script type="text/javascript" src="{{ url_for ('static', filename= "js/file_form.js") }}"></script>
 
-<form action="{{ url_for('edit_product', id=id) }}" method="post" enctype="multipart/form-data">
-        {{ form.hidden_tag() }}
+    <section class="ct-u-paddingBo40">
+        <div class="container">
+            <div class="ct-sectionHeader ct-u-paddingBoth20">
+                <h2 class="ct-u-size34">add product</h2>
+            </div>
+            <div class="row">
+                <div class="col-xs-offset-1 col-xs-10 col-md-offset-2 col-md-8">
 
-    <div class="form-group">
-        {{ render_field_with_errors(form.title, class="form-control") }}
-        {{ render_field_with_errors(form.price, class="form-control") }}
+                    <form action="{{ url_for('edit_product', id=id) }}" method="post" enctype="multipart/form-data">
+                        {{ form.hidden_tag() }}
+                        <div class="form-group">
+                            {{ render_field_with_errors(form.title, class="form-control") }}
+                            {{ render_field_with_errors(form.price, class="form-control") }}
+                            {{ render_field_with_errors(form.description, class="form-control") }}
+                            <div id="hide" class="form-group big-form-file">
+                                {{ form.images(id="file", class="inputfile", data_multiple_caption="{count} files selected", multiple="") }}
 
-        {{ render_field_with_errors(form.description, class="form-control") }}
-
-            <div  id ="hide" class="form-group big-form-file">
-                {{form.images(id="file", class="inputfile", data_multiple_caption="{count} files selected", multiple="")}}
-
-                                <label for="file"class="hand-cursor">
-                                <span class="photo_text hidden-xs ct-u-size24"><i class="fa fa-camera ct-u-size30" aria-hidden="true"></i> Select images</span>
-
+                                <label for="file" class="hand-cursor">
+                                    <span class="photo_text hidden-xs ct-u-size24"><i class="fa fa-camera ct-u-size30"
+                                                                                      aria-hidden="true"></i> Select images</span>
                                 </label>
+                            </div>
+                        </div>
+                        <div class="control-group">
+                            <div class="controls">
+                                <button type="submit" class="btn btn-motive btn-form">Publish</button>
+                            </div>
+                        </div>
+                    </form>
 
-
-
+                </div>
+            </div>
         </div>
+    </section>
 
 
 
-
-
-    </div>
-
-    <div class="control-group">
-        <div class="controls">
-          <button type="submit" class="btn btn-motive btn-form">Publish</button>
-        </div>
-    </div>
-  </form>
-
-        </div>
-    </div>
-</div>
-</section>
-
-    <script>
-
-                jQuery(window).on("load",function () {
-                var inputs = document.querySelectorAll( '.inputfile' );
-Array.prototype.forEach.call( inputs, function( input )
-{
-	var label	 = input.nextElementSibling,
-		labelVal = label.innerHTML;
-
-	input.addEventListener( 'change', function( e )
-	{
-		var fileName = '';
-		if( this.files && this.files.length > 1 ) {
-            fileName = this.files.length + " files selected";
-
-		}
-		else
-			fileName = e.target.value.split( '\\' ).pop();
-
-		if( fileName )
-			label.querySelector( 'span' ).innerHTML = fileName
-		else
-			label.innerHTML = labelVal;
-	});
-});
-});
-
-    </script>
 {% endblock %}
 
 
