--- a/static/style/style.css
+++ b/static/style/style.css
@@ -1721,9 +1721,16 @@ color:#FFFFFF;
 
 
 @media (min-width: 768px) {
-#single-post img{
+.single-post-image{
     max-width: 450px;
 }
+    .single-product-image{
+
+}
+    .img-comment{
+        max-width: 250px;
+
+    }
 }
 .uploaded{
     font-size: 12px;
@@ -1881,10 +1888,9 @@ ul ul ul ul{
 
 
 
-.left-image {
+.left-image img{
     float:left; /* Выравнивание по левому краю */
-
-    width: 50px;
+    width: 40px;
     display:inline; /* для IE6, чтоб отступ слева не удвоился */
 
    }
