--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -4,7 +4,7 @@
 {% block body %}
     <script type="text/javascript" src="{{ url_for ('static', filename= "js/file_form.js") }}"></script>
 
-    <section class="ct-u-paddingBo40">
+    <section class="ct-u-paddingBoth30">
         <div class="container">
             <div class="ct-sectionHeader ct-u-paddingBoth20">
                 <h2 class="ct-u-size34">add product</h2>
