--- a/templates/single_post.html
+++ b/templates/single_post.html
@@ -15,7 +15,7 @@
 
                         <div class="edit-post-block dropdown ct-u-paddingTop5 text-center ct-u-size22">
 
-                            <i class="fa fa-pencil-square-o  dropdown-toggle" aria-hidden="true"  data-toggle="dropdown">edit</i>
+                            <i class="fa fa-pencil-square-o dropdown-toggle ct-u-cursor-pointer" aria-hidden="true"  data-toggle="dropdown">edit</i>
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="{{ url_for('edit_post', id=post.id  ) }}">
                                     <i class="fa fa-pencil-square-o" aria-hidden="true"></i> edit</a></li>
