--- a/templates/base.html
+++ b/templates/base.html
@@ -146,7 +146,7 @@
                 {% if current_user.avatar_min %}
                     <img src="{{ url_for('uploaded_file',filename= current_user.avatar_min) }}"  width=49px />
                 {% else %}
-                    <img src="{{ url_for('uploaded_file',filename="min_icon-user-default.png") }}"  width=49px />
+                    <img src="{{ url_for('static',filename="image/min_icon-user-default.png") }}"  width=49px />
                 {% endif %}
                 <a href="{{ url_for('user', username = current_user.username) }}">{{current_user.username}}</a>
                 <a class="right" href="{{ url_for('security.logout') }}">logout</a>
@@ -183,7 +183,7 @@
                                         {% if current_user.avatar_min %}
                                             <img src="{{ url_for('uploaded_file',filename= current_user.avatar_min) }}" />
                                         {% else %}
-                                            <img src="{{ url_for('uploaded_file',filename="min_icon-user-default.png") }}" />
+                                            <img src="{{ url_for('static',filename="image/min_icon-user-default.png") }}" />
                                         {% endif %}
                                     </a>
                                 </li>
