--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
                                 {% if current_user.avatar_min %}
                                     <img src="{{ url_for('uploaded_file',filename=current_user.avatar_min) }}"/>
                                 {% else %}
-                                    <img src="{{ url_for('uploaded_file',filename="min_icon-user-default.png") }}"/>
+                                    <img src="{{ url_for('static',filename="image/min_icon-user-default.png") }}"/>
                                 {% endif %}
                             </a>
                         </li>
