--- a/templates/security/login_user.html
+++ b/templates/security/login_user.html
@@ -8,7 +8,7 @@
     <div class="ct-sectionHeader ct-u-paddingBottom20">
         <h2>login</h2>
 
-        <a href="{{ url_for("social.auth", backend="facebook") }}"><img src="{{ url_for('static',filename="image/log_in_with_facebook_button.png") }}"></a>
+        <a href="{{ url_for("social.auth", backend="facebook") }}"><img src="{{ url_for('static',filename="image/log_in_with_facebook_button.png") }}" width="250px" ></a>
 
     </div>
     <div class="row">
